name:                authy
version:             0.1
license:             MIT
license-file:        LICENSE
author:              Krzysztof Woś
maintainer:          Krzysztof Woś <krzysztof.wos@gmail.com>
copyright:           Copyright Krzysztof Woś
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         Tiny API client for <https://www.authy.com Authy> two-factor authentication

source-repository head
  type:                git
  location:            https://github.com/krzysztofwos/authy.git

library
  default-language:    Haskell2010
  build-depends:       aeson                >= 0.6.2.1 && < 0.9,
                       base,
                       bytestring           >= 0.10.0.2,
                       curl                 >= 1.3.4,
                       curl-aeson           >= 0.0.3,
                       text                 >= 0.11.3.1,
                       unordered-containers >= 0.2.3.3
  exposed-modules:     Authy
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-orphans
  hs-source-dirs:      src

test-suite spec
  build-depends:       authy,
                       aeson                >= 0.6.2.1,
                       base,
                       hspec                >= 1.7.2.1,
                       QuickCheck           >= 2.6
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-name-shadowing -fno-warn-orphans
  hs-source-dirs:      tests
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
